--- a/style.css
+++ b/style.css
@@ -4,28 +4,190 @@ Logo: http://i.imgur.com/pHyusTb.png
 登入小人: http://i.imgur.com/HxSb8GP.png
 選單 15px
 */
-
 header{
   width: 960px;
   margin: 0 auto;
 }
 
-h1{
+header h1{
   float: left;
 }
 
-ul{
+header ul{
   float: left;
   list-style-type: none;
   margin-top: 3em;
 }
 
-li{
+header li{
   float: left;
   margin-left: 3em;
 }
 
-div{
+header div{
   float: right;
   margin-top: 3em;
 }
+/*
+手機圖 http://i.imgur.com/DH1JUY1.png
+下陰影 http://i.imgur.com/qHFBqbU.png
+
+標題 40px
+內文 20px
+價錢 24px
+
+按鈕 128x33, #fe8511 -> #dc5608
+*/
+.sectionContent {
+  width: 960px;
+  margin: 0 auto;
+  height: 760px;
+  position: relative;
+  font-size: 20px;
+  background: url(http://i.imgur.com/qHFBqbU.png) center bottom no-repeat;
+}
+.phone{
+  position: absolute;
+  top: 130px;
+  left: 60px;
+}
+
+.description{
+  position: absolute;
+  top: 100px;
+  left: 400px;
+  width:250px;
+}
+
+.sectionContent h2{
+  font-size: 40px;
+}
+
+.sectionContent ul{
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.price{
+  font-size: 24px;
+}
+
+.sectionContent button{
+  padding: 10px 40px;
+  border: 0;
+  border-radius: 100px;/*決定每個邊角的弧度，一般大於原物件長度一半即可達到*/
+  color: #fff;
+  
+  background: -webkit-linear-gradient(top, #fe8511 0%,#dc5608 100%); /* Chrome10+,Safari5.1+ */
+  background: linear-gradient(to bottom, #fe8511 0%,#dc5608 100%); /* W3C */
+}
+
+/*
+SD 卡：http://i.imgur.com/c2Z5au0.png
+電池：http://i.imgur.com/NFwOBqW.png
+耳機：http://i.imgur.com/stm47RT.png
+醜醜手機殼：http://i.imgur.com/aKkhCy6.png
+
+大字：40px
+大字框：70x185
+*/
+.sectionFooter{
+  width: 960px;
+  margin: 0 auto;
+}
+/* 
+.sectionFooter section{
+  width: 960px;
+  margin: 1em auto;
+  background:none;
+}
+
+
+.sectionFooter h3, ul, .cover{
+  float: left;
+}
+
+.sectionFooter h3{
+  font-size: 40px;
+  border: 0px #ccc double;
+  padding: 40px 15px;
+  width: 1em;
+  line-height: 1.3;
+  margin: 0;
+  margin-right: 16px;
+}
+
+.sectionFooter ul{
+  padding: 0;
+  margin: 0;
+  margin-right: 40px;
+  list-style-type: none;
+}
+
+.sectionFooter p{
+  clear: both;
+  text-align: center;
+}
+
+.ectionFooter figure{
+  font-size: 13px;
+  text-align: center;
+  border: 0px solid #ccc;
+  padding: 8px 16px;
+}
+
+.sectionFooter li figure{
+  border-top-width:0;
+}
+
+.sectionFooter li figcaption{
+  font-size:10px;  
+}
+
+.sectionFooter li:first-child figure{
+  border-top-width: 1px;
+}
+ */
+
+
+h3, ul, .cover{
+  display:inline-block;
+  vertical-align:top;
+}
+
+h3{
+  font-size: 40px;
+  border: 0px #ccc double;
+  padding: 40px 15px;
+  width: 1em;
+  line-height: 1.3;
+  margin: 0;
+  margin-right: 16px;
+}
+ul{
+  list-style-type: none;
+}
+
+figure{
+  border:1px #ccc solid;
+  padding:8px 16px;
+  text-align:center;
+  font-size: 13px;
+}
+
+li figure{
+  border-top-width:0px;
+  
+}
+.sectionFooter p{
+  text-align:center;
+  
+}
+.sectionFooter li:first-child figure{
+  border-top-width: 1px;
+}
+
+
+
+
+
