--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ SD 卡：http://i.imgur.com/c2Z5au0.png
 */
 .sectionFooter{
   width: 960px;
-  margin: 0 auto;
+  margin: 1em auto;
 }
 /* 
 .sectionFooter section{
@@ -129,7 +129,7 @@ SD 卡：http://i.imgur.com/c2Z5au0.png
   text-align: center;
 }
 
-.ectionFooter figure{
+.sectionFooter figure{
   font-size: 13px;
   text-align: center;
   border: 0px solid #ccc;
@@ -150,22 +150,25 @@ SD 卡：http://i.imgur.com/c2Z5au0.png
  */
 
 
-h3, ul, .cover{
+.sectionFooter h3, ul, .cover{
   display:inline-block;
   vertical-align:top;
 }
 
-h3{
+.sectionFooter h3{
   font-size: 40px;
-  border: 0px #ccc double;
+  border: 1px #ccc double;
   padding: 40px 15px;
   width: 1em;
   line-height: 1.3;
   margin: 0;
   margin-right: 16px;
 }
-ul{
+.sectionFooter ul{
+  padding: 0;
+  margin: 0;
   list-style-type: none;
+  margin-right: 40px;
 }
 
 figure{
@@ -179,6 +182,11 @@ li figure{
   border-top-width:0px;
   
 }
+
+.sectionFooter li figcaption{
+  font-size:10px;  
+}
+
 .sectionFooter p{
   text-align:center;
   
